WIP exam like 70% done

--- a/exam/custom.bib
+++ b/exam/custom.bib
@@ -54,7 +54,7 @@
 
 @article{skantze2021turntaking,
   title = {Turn-taking in Conversational Systems and Human-Robot Interaction: A Review},
-  journal = {Computer Speech & Language},
+  journal = {Computer Speech \& Language},
   volume = {67},
   pages = {101178},
   year = {2021},
